新增接口 获取repo下所有环境
